--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,6 @@
     <color name="colorLightGray">#E2E2E2</color>
     <color name="colorRed">#F44336</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorGreen">#5DCF61</color>
+    <color name="colorGreen">#62CA66</color>
     <color name="colorBlue">#1483DC</color>
 </resources>
