--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    // Light Theme
     <color name="colorPrimary">#018A9A</color>
+    <color name="colorPrimaryDark">#067987</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="colorBackground">#E2E2E2</color>
+
+    <color name="colorText">#FFFFFF</color>
+    <color name="colorItemAmountText">#636363</color>
+    <color name="colorInactiveText">#BEBEBE</color>
+    <color name="colorActiveText">@color/colorPrimary</color>
 
     <color name="colorActiveButtonBackground">@color/colorPrimary</color>
     <color name="colorActiveButtonText">@color/colorAccent</color>
@@ -9,10 +17,19 @@
     <color name="colorInactiveButtonBackground">#BEBFBF</color>
     <color name="colorInactiveButtonText">#2E2929</color>
 
-    <color name="colorItemAmountText">#636363</color>
-    <color name="colorInactiveText">#BEBEBE</color>
-    <color name="colorActiveText">@color/colorPrimary</color>
 
+    // Dark Theme
+    <color name="colorPrimaryAlt">#404647</color>
+    <color name="colorPrimaryDarkAlt">#303333</color>
+    <color name="colorAccentAlt">#716D6D</color>
+
+    <color name="colorTextAlt">#636363</color>
+    <color name="colorItemAmountTextAlt">#636363</color>
+    <color name="colorInactiveTextAlt">#BEBEBE</color>
+    <color name="colorActiveTextAlt">@color/colorPrimary</color>
+
+
+    // Default Colors
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#DFDFDF</color>
     <color name="colorLightGray">#E2E2E2</color>
