working on SwipeRevealLayout.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,4 +5,5 @@
     android:id="@+id/activity_settings_fragment_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     tools:context=".ActivitySettings" />
