--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -5,15 +5,16 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ActivityLaunch">
+    tools:context=".ActivityLaunch"
+    tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/iv_app"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginBottom="10dp"
-        android:contentDescription="@string/iv_desc_app_name"
         android:background="@color/colorPrimary"
+        android:contentDescription="@string/iv_desc_app_name"
         android:src="@drawable/ic_app" />
 
     <TextView
@@ -21,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textColor="@color/colorPrimary"
         android:text="@string/app_name"
+        android:textColor="@color/colorPrimary"
         android:textSize="38sp" />
 
 </LinearLayout>
