implemented SwipeRevealLayout. locked app in portrait mode. need to update dialogs.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="colorGray">#DFDFDF</color>
     <color name="colorLightGray">#E2E2E2</color>
     <color name="colorRed">#F44336</color>
+    <color name="colorOrange">#FFC107</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGreen">#62CA66</color>
     <color name="colorBlue">#1483DC</color>
