--- a/app/src/main/res/layout/item_view_entry.xml
+++ b/app/src/main/res/layout/item_view_entry.xml
@@ -1,52 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_view_entry_srl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
-    android:padding="10dp">
+    app:dragEdge="right"
+    app:mode="same_level">
 
-    <ImageView
-        android:id="@+id/item_entry_iv_status"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="@string/iv_desc_entry"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/item_view_entry_tv_amount"
+    <LinearLayout
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/item_entry_iv_edt"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorOrange"
+            android:contentDescription="@string/iv_desc_entry_swipe_item"
+            android:gravity="center"
+            android:padding="20dp"
+            android:src="@drawable/ic_edit" />
+
+        <ImageView
+            android:id="@+id/item_entry_iv_del"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorRed"
+            android:contentDescription="@string/iv_desc_entry_swipe_item"
+            android:gravity="center"
+            android:padding="20dp"
+            android:src="@drawable/ic_delete" />
+
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:textColor="@color/colorItemAmountText"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/item_entry_iv_status"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Amount" />
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="10dp">
 
-    <TextView
-        android:id="@+id/item_view_entry_tv_comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/item_entry_iv_status"
-        tools:text="Comment" />
+        <ImageView
+            android:id="@+id/item_view_entry_iv_status"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:contentDescription="@string/iv_desc_entry"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/item_view_entry_tv_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/colorItemAmountText"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/item_view_entry_iv_status"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Amount" />
+
+        <TextView
+            android:id="@+id/item_view_entry_tv_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/item_view_entry_iv_status"
+            tools:text="Comment" />
 
 
-    <TextView
-        android:id="@+id/item_view_entry_tv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="textEnd"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Date" />
+        <TextView
+            android:id="@+id/item_view_entry_tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Date" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.chauthai.swipereveallayout.SwipeRevealLayout>
