--- a/app/src/main/res/layout/dialog_entry_upd.xml
+++ b/app/src/main/res/layout/dialog_entry_upd.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:background="@drawable/dialog_background"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/dialog_entry_add_tv_msg_entry_upd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_msg_entry_upd"
+        android:layout_marginStart="10dp"
+        android:text="@string/tv_msg_entry_upd_header"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,31 +51,16 @@
         app:layout_constraintTop_toBottomOf="@+id/dialog_entry_upd_et_amount" />
 
     <Button
-        android:id="@+id/dialog_entry_upd_btn_del"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorActiveButtonBackground"
-        android:foreground="@drawable/ripple"
-        android:text="@string/btn_text_del"
-        android:textColor="@color/colorActiveButtonText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dialog_entry_upd_et_comment" />
-
-    <Button
         android:id="@+id/dialog_entry_upd_btn_upd"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorActiveButtonBackground"
-        android:foreground="@drawable/ripple"
+        android:background="@color/colorAccent"
+        android:foreground="@drawable/ripple_primary"
         android:text="@string/btn_text_upd"
-        android:textColor="@color/colorActiveButtonText"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dialog_entry_upd_btn_del" />
+        app:layout_constraintTop_toBottomOf="@id/dialog_entry_upd_et_comment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
