--- a/app/src/main/res/layout/dialog_person_upd.xml
+++ b/app/src/main/res/layout/dialog_person_upd.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:background="@drawable/dialog_background"
     android:padding="10dp">
 
     <TextView
@@ -11,13 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/tv_msg_person_edit"
+        android:layout_marginStart="10dp"
+        android:text="@string/tv_msg_person_edit_header"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,16 +40,15 @@
     <Button
         android:id="@+id/dialog_person_upd_btn_upd"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorActiveButtonBackground"
-        android:foreground="@drawable/ripple"
+        android:background="@color/colorAccent"
+        android:foreground="@drawable/ripple_primary"
         android:text="@string/btn_text_upd"
-        android:textColor="@color/colorActiveButtonText"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dialog_person_upd_et_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
